# EasyDemo

./: README.md  requirements.txt  setup.cfg  setup.py
EasyCV/: README.md  requirements.txt  setup.cfg  setup.py
EasyCV/easycv/: __init__.py
EasyCV/easycv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
EasyCV/easycv/config/: __init__.py
EasyCV/easycv/manager/: __init__.py
EasyCV/easycv/registry/: __init__.py  build_functions.py  registry.py  root.py
EasyCV/easycv/transforms/: __init__.py  base.py  formatting.py  transforms.py  utils.py  wrappers.py
configs/: raw2raw-torch-2dnr.py  raw2raw-trt-2dnr.py  rgb2rgb-torch-2dnr.py  rgb2rgb-torch-3dnr.py  rgb2rgb-trt-2dnr.py  rgb2rgb-trt-3dnr.py
easydemo/: __init__.py  press_key.py  registry.py
easydemo/models/: __init__.py  classical.py  ezmodel.py
easydemo/runners/: __init__.py  runner.py
easydemo/transforms/: __init__.py  base.py  legacy.py  model_wrappers.py  wrappers.py
tools/: demo.py  torch2onnx.py
weights/: command.txt
