[metadata]
name = easydemo
author = Yoseop Jeong
author_email = yoseop.jeong@enerzai.com
url = https://github.com/ENERZAi/EasyDemo/
description = EasyDemo : ENERZAi Demo Tool
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
keywords = easy, ezie, demo

[options]
zip_safe = False
include_package_data = True