[metadata]
name = easycv
author = Yoseop Jeong
author_email = yoseop.jeong@enerzai.com
url = https://github.com/ENERZAi/EasyCV/
description = EasyCV : ENERZAi Computer Vision Tool
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
keywords = easy, ezie

[options]
zip_safe = False
include_package_data = True